src/ui/snapshots/rusty_amp__ui__draw__tests__default_screen.snap
---
source: src/ui/draw.rs
expression: text
---
  GATE ──▶ TS-808 ──▶ AMP+CAB ──▶ REVERB ──▶ OUTPUT                                  IN ▐░░░░░░░░░░░░░░░░░░░░░░░░░░░░▌          OUT ▐░░░░░░░░░░░░░░░░░░░░░░░░░░▌          
══════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════════
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶  [ RANDALL ]  [ AC30 ]  [ DR103 ]                    CAB  ◀ MESA V30 ▶  [ MARSH GB ]  [ ORANGE ]  [ WEM FANE ]                         ┃
┃          ···                    ···                    ···                    ··◇                    ◇··                    ·◇·              ◇··       ···       ···   ┃
┃         · ● ◇                  · ● ·                  · ● ·                  · ● ·                  · ● ·                  · ● ·            · ● ·     · ● ·     · ● ·  ┃
┃          · ·                    · ◇                    ◇ ·                    · ·                    · ·                    · ·              · ·       ◇ ·       ◇ ·   ┃
┃       GAIN 7.5               BASS 10.0               MID 0.0              TREBLE 6.5            PRESENCE 4.0            MASTER 5.5         MIC 4.0  BLEND 0.0 ROOM 0.0 ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│╔ NOISE GATE ◉ ══════════════════════════╗╔ TS-808 ◉ ══════════════════════════════╗╔ SPRING REVERB ◉ ═══════════════════════╗╔ + ADD ═════════════════════════════════╗│
│║                2.0  3.0                ║║              4.5  6.0  7.0             ║║              5.5  4.0  2.5             ║║                   ＋                    ║│
│║                ▗▄▄▄▄▄▄▄▖               ║║                ▗▄▄▄▄▄▄▄▖               ║║                ▗▄▄▄▄▄▄▄▖               ║║                                        ║│
│╚════════════════════════════════════════╝╚════════════════════════════════════════╝╚════════════════════════════════════════╝╚════════════════════════════════════════╝│
│┏┤ EDITING: NOISE GATE ◉ ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓│
│┃                                        ···                                                                               ◇···                                        ┃│
│┃                                       ◆ ● ·                                                                              · ● ·                                       ┃│
│┃                                        · ·                                                                                · ·                                        ┃│
│┃                                    THRESH 2.0                                                                         RELEASE 3.0                                    ┃│
│┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛│
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                           K keybindings  Q quit
