src/ui/snapshots/rusty_amp__ui__draw__tests__help_modal.snap
---
source: src/ui/draw.rs
expression: text
---
                                                                                                                                                                          
┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[ ] move┐
│  GATE ──▶ TS-808 ──▶ AMP+CAB ──▶ REVERB ──▶ OUTPUT                                                                   IN ▐░░░░░░░░░░▌          OUT ▐░░░░░░░░░▌          │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┏┤ MESA DUAL RECTIFIER ├━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┤ 🎙 MESA V30 ├┓
┃  AMP  [ JCM800 ]  ◀ DUAL RECT ▶  [ RANDALL ]  [ AC30 ]  [ DR103 ]  ↑/↓  A                                           ┃┃  CAB  ◀ MESA V30 ▶  [ MARSH GB ]  [ ORANGE ]  [ ┃
┃                                                                                                                     ┃┃                                                 ┃
┃         ···                ···                 ···                ··◇                 ◇··                ·◇·        ┃┃       ◇··             ···              ···      ┃
┃        · ● ◇              · ● ·     ╔ K E Y B I N D I N G S ════════════════════════════════════════════════════════════════════╗           · ● ·            · ● ·     ┃
┃         · ·                · ◇      ║Panels & chain                                                                             ║            ◇ ·              ◇ ·      ┃
┃      GAIN 7.5           BASS 10.0   ║  1 / 2 / 3 / 4  focus chain, amp, timeline, pedals (again: hide)                          ║0        BLEND 0.0        ROOM 0.0    ┃
┃                                     ║  Tab / Shift-Tab  jump to next / previous panel                                           ║                                      ┃
┃                                     ║  ←/→  move inside the focused panel                                                       ║                                      ┃
┃▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚║  [ / ]  move the ribbon's stage earlier / later                                           ║▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚▞▚┃
┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━║  Space  bypass stage, pedal, or transport under focus                                     ║━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
┌ GUITAR RIG ─────────────────────────║Play & edit                                                                                ║──────────────────────────────────────┐
│┌ NOISE GATE ◉ ──────────────────────║  ↑/↓  +/−  knob / adjust value                                                            ║ADD ─────────────────────────────────┐│
││                2.0  3.0            ║  D  remove pedal from the board                                                           ║                ＋                    ││
││                ▗▄▄▄▄▄▄▄▖           ║  A / C  next amp / cabinet                                                                ║                                     ││
│└────────────────────────────────────║  I / X  IR browser / IR bypass                                                            ║─────────────────────────────────────┘│
││├───────────────────────────────────║  O  change audio devices                                                                  ║────────────────────────────────────┤││
││SELECT A PEDAL — ←→                 ║  Z / U  amp-plugin bypass / browser                                                       ║                                     ││
││                                    ║Tools                                                                                      ║                                     ││
││                                    ║  P  preset browser                                                                        ║                                     ││
││                                    ║  S  save current rig as preset                                                            ║                                     ││
││                                    ║  T  chromatic tuner                                                                       ║                                     ││
││                                    ║  M  practice metronome (+/− tempo, Space on/off)                                          ║                                     ││
│└────────────────────────────────────║  V  plugin browser                                                                        ║─────────────────────────────────────┘│
└─────────────────────────────────────║  R  start / stop recording (take lands on the timeline)                                   ║──────────────────────────────────────┘
                                      ║  Q / Ctrl-C  quit                                                                         ║                                       
                                      ║Panels                                                                                     ║                                       
                                      ║  B  practice-track browser (MP3 / WAV / FLAC)                                             ║                                       
                                      ║Preset browser                                                                             ║                                       
                                      ║  ↑/↓  Enter  navigate / apply (audio uninterrupted)                                       ║                                       
                                      ║  S / E / I  save / export / import                                                        ║                                       
                                      ║  D  delete (user presets only)                                                            ║                                       
                                      ║Timeline (focused)                                                                         ║                                       
                                      ║  Space  play / pause, or mute the selected track                                          ║                                       
                                      ║  ↑/↓  ←/→  select line / seek ±5 s                                                        ║                                       
                                      ║  [ / ]  L  loop in-point / out-point, toggle loop                                         ║                                       
                                      ║  Del  delete selected track                                                               ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                                                                           ║                                       
                                      ║                                       Esc / K close                                       ║                                       
                                      ╚═══════════════════════════════════════════════════════════════════════════════════════════╝
